# trifit

./: .gitignore  Cargo.toml  ISSUES_IDEAS.md  LICENSE  README.md  flake.nix  rust-toolchain.toml  shell.nix
.cargo/: config.toml
src/: colors.rs  io.rs  main.rs  triangle.rs
src/scoring/: avg_with_shape_weight.rs  mod.rs  percentile_with_size_weight.rs
src/utils/: mod.rs
v2/: Cargo.toml
v2/src/: color.rs  ffmpeg_main.rs  main.rs  mp4_main.rs  swsrasv.rs  vec2.rs
