[package]
name = "trifit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
image = "0.24.2"
macroquad = "0.3.22"
gif = "0.11.4"

[profile.dev]
opt-level = 2

[profile.release]
codegen-units = 1
lto = true

