[package]
name = "trifit"
version = "0.4.0"
edition = "2021"
authors = ["Rowan S-L <r@fawkes.io>"]
license = "MIT"
description = "Image compression and art generation with triangles!"
homepage = "https://github.com/rowan-sl/trifit"
repository = "https://github.com/rowan-sl/trifit"
keywords = ["art", "image", "mindustry", "cli-tool"]
categories = ["command-line-utilities", "multimedia::images"]
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# yep its a lot.
[dependencies]
anyhow = "1.0.58"
image = "0.24.2"
gif = "0.11.4"
clap = { version = "3.2.8", features = ["derive"] }
piston = "0.53.0"
piston2d-graphics = "0.42.0"
pistoncore-glutin_window = "0.69.0"
piston2d-opengl_graphics = "0.81.0"
piston2d-sprite = "0.66.0"
tokio = { version = "1.17.0", features = ["full"] }
pretty_env_logger = "0.4"
log = "0.4"
rand = "0.8.5"
palette = "0.6.0"
flume = "0.10.13"
svg = "0.10.0"
resvg = "0.23.0"
usvg = "0.23.0"
tiny-skia = "0.6.6"# version used by usvg
lazysort = "0.2.1"
stati = "0.11.0-beta"

# [profile.dev]
# opt-level = 2

[profile.release]
# debug = true
# codegen-units = 1
# lto = true

[workspace]
members = [
    "v2"
]
